Fix header alignment error

--- a/src/components/SingleBook/SingleBook.css
+++ b/src/components/SingleBook/SingleBook.css
@@ -11,6 +11,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 1rem;
+  margin-left: -2.5rem;
   padding: 0 2rem;
 }
 
