--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -24,15 +24,23 @@ a:active {
   color: #121212;
 }
 
-.bookstore-header {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 5.938rem;
-  margin: 0;
-  padding: 1.438rem 9.088rem 1.688rem 10.75rem;
+.wrapper {
   background-color: #fff;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
+
+.bookstore-header {
+  width: 75rem;
+  height: 6;
+  border-radius: 4px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 0.1rem;
+  margin: auto;
 }
 
 .bookstore-header nav ul {
